--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,4 @@
-backend_url =https://aliabdelrah1-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+backend_url =https://aliabdelrah1-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
 sentiment_analyzer_url=https://sentianalyzer.2508itj434w9.us-south.codeengine.appdomain.cloud
+WATSON_API_KEY=oBM1Yj-1g6EPtu7flprtxpk6JHaxp1wbgmbKbrUC_ttx
+WATSON_URL=https://api.eu-gb.natural-language-understanding.watson.cloud.ibm.com/instances/1107862e-fce8-44ab-b2d3-ce3d0120fb2f
